--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,25 +1,23 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
+title: OpenElective
 logo: logo.svg # You can add own logo.
-description: Zolan is modern minimal theme for Jekyll
+description: Open Elective Github training
 
 
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
+  name: OpenElective
   image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
-  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
+  say-hello: Hello, welcome to <strong>Class</strong>
+  bio: Designs, talks, and writesups
 
 
 #-------------------------------
 # Contact links
 twitter: https://twitter.com/ # Add your Twitter handle
-facebook: https://facebook.com/ # Add your Facebook handle
-dribbble: https://dribbble.com/ # Add your Dribbble handle
-instagram: https://instagram.com/ # Add your Instagram handle
+instagram: https://instagram.com/blocks2bots # Add your Instagram handle
 pinterest: https://pinterest.com/ # Add your Pinterest handle
 
 
@@ -31,7 +29,7 @@ disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example
 #-------------------------------
 # Instagram Feed
 instafeed: # To enable the instafeed, use the value true. To turn off use the value false.
-instagram-profile: artemsheludko_ # Add instagram username
+instagram-profile: blocks2bots # Add instagram username
 
 
 #-------------------------------
