--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,11 @@ plugins:
 paginate: 5
 paginate_path: "/page/:num"
 
+collections:
+  authors:
+    permalink:         /authors/:path/
+    output:            true
+
 
 # Pages Path
 defaults:
